--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/thejhp1/APIproject.git"
+    "url": "git+https://github.com/thejhp1/SimpleFix.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/thejhp1/APIproject/issues"
+    "url": "https://github.com/thejhp1/SimpleFix/issues"
   },
-  "homepage": "https://github.com/thejhp1/APIproject#readme"
+  "homepage": "https://github.com/thejhp1/SimpleFix#readme"
 }
