--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@react-google-maps/api": "^2.19.2",
     "dayjs": "^1.11.9",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
