displaying schedule based on provided date'

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/utilities": "^3.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@react-google-maps/api": "^2.19.2",
     "dayjs": "^1.11.9",
